--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-navigation": "^3.1.2",
     "react-native-table-component": "^1.2.1",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-native-websocket": "^1.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
-    "react-navigation": "^3.12.1"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.12.1",
+    "socket.io-client": "^2.2.0"
   },
   "private": true
 }
